# credit-data-simulator

./: .gitignore  Cargo.toml  Dockerfile  GUIDE.md  PERFORMANCE_REPORT.md  README.md  run_simulator.sh  stop_simulator.sh
src/: config.rs  core_banking.rs  engine.rs  lib.rs  main.rs  mapping_service.rs  regulator_endpoint.rs  rulepack_service.rs
src/data_preparation/: Nama Belakang Perempuan.txt  Nama Depan Laki-Laki.txt  Nama Depan Perempuan.txt
src/models/: credit.rs
