[package]
name = "credit-data-simulator"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Credit data pipeline simulator — Core Banking, Mapping, Rulepack, Regulator (OJK)"
repository = "https://github.com/Vastar-AI/credit-data-simulator"

[dependencies]
axum = { version = "0.7", features = ["tokio", "json"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.18"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
md5 = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-stream = "0.3"

[workspace]
